--- a/index.html
+++ b/index.html
@@ -57,21 +57,20 @@
       Junior Front-End Developer
     </h2>
     <div class="icons">
-      <a href="https://www.linkedin.com/in/timotei-dumitru-1494ab160/">
+      <a href="https://www.linkedin.com/in/timotei-dumitru-1494ab160/" target="_blank">
         <i class="fab fa-linkedin fa-2x"></i>
       </a>
-      <a href="https://github.com/ShokadinuEU">
+      <a href="https://github.com/ShokadinuEU" target="_blank">
         <i class="fab fa-github fa-2x"></i>
       </a>
-      <a href="https://www.facebook.com/dumy.timy">
+      <a href="https://www.facebook.com/dumitru.timy" target="_blank">
         <i class="fab fa-facebook fa-2x"></i>
       </a>
-      <a href="https://plus.google.com/112277218680998369339">
+      <a href="https://plus.google.com/112277218680998369339" target="_blank">
         <i class="fab fa-google-plus-g fa-2x"></i>
       </a>
     </div>
   </main>
-
 
   <script src="js/main.js"></script>
 </body>
